@@ -53,9 +53,11 @@ Naemon Config
 
 ## Check Specific Arguments
 
-| Argument | Description                                          |
-| -------- | ---------------------------------------------------- |
-| range    | Sets time range to calculate average (default is 1m) |
+| Argument         | Description                                                           |
+| ---------------- | --------------------------------------------------------------------- |
+| hide-args        | Hide arguments when showing the top N processes                       |
+| n\|procs-to-show | Number of processes to show when printing the top consuming processes |
+| range            | Sets time range to calculate average (default is 1m)                  |
 
 ## Attributes
 
