@@ -69,9 +69,11 @@ Naemon Config
 
 ## Check Specific Arguments
 
-| Argument | Description                                                                         |
-| -------- | ----------------------------------------------------------------------------------- |
-| type     | Type of memory to check. Default: physical,committed (win) or physical,swap (other) |
+| Argument         | Description                                                                         |
+| ---------------- | ----------------------------------------------------------------------------------- |
+| hide-args        | Hide arguments when showing the top N processes                                     |
+| n\|procs-to-show | Number of processes to show when printing the top consuming processes               |
+| type             | Type of memory to check. Default: physical,committed (win) or physical,swap (other) |
 
 ## Attributes
 
