@@ -15,6 +15,10 @@ func init() {
 
 type CheckCPU struct {
 	times []string
+	// List the top N cpu consuming processes
+	numProcs int64
+	// Hide arguments when showing the top N processes
+	hideArgs bool
 }
 
 func NewCheckCPU() CheckHandler {
@@ -33,7 +37,9 @@ func (l *CheckCPU) Build() *CheckData {
 			State: CheckExitOK,
 		},
 		args: map[string]CheckArgument{
-			"time": {value: &l.times, description: "The times to check, default: 5m,1m,5s"},
+			"time":            {value: &l.times, description: "The times to check, default: 5m,1m,5s"},
+			"n|procs-to-show": {value: &l.numProcs, description: "Number of processes to show when printing the top consuming processes"},
+			"hide-args":       {value: &l.hideArgs, description: "Hide arguments when showing the top N processes"},
 		},
 		defaultFilter:   "core = 'total'",
 		defaultWarning:  "load > 80",
@@ -99,6 +105,13 @@ func (l *CheckCPU) Check(ctx context.Context, snc *Agent, check *CheckData, _ []
 				Warning:       check.warnThreshold,
 				Critical:      check.critThreshold,
 			})
+		}
+	}
+
+	if l.numProcs > 0 {
+		err := appendProcs(ctx, check, l.numProcs, l.hideArgs, "cpu")
+		if err != nil {
+			return nil, fmt.Errorf("procs: %s", err.Error())
 		}
 	}
 
